<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_color"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/output"
        android:layout_width="315dp"
        android:layout_height="123dp"
        android:background="@drawable/rounded_rectangle"
        android:hint="@string/answer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#FF292727"
        android:textSize="20sp"
        android:backgroundTint="#9F3187C8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <EditText
        android:id="@+id/input"
        android:layout_width="315dp"
        android:layout_height="123dp"
        android:autofillHints=""
        android:background="@drawable/rounded_rectangleinput"
        android:backgroundTint="#CD3187C8"
        android:ems="10"
        android:hint="@string/input_text_to_translate"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#292727"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/output"
        app:layout_constraintEnd_toEndOf="@+id/output"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/output"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/button"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_rectanglebutton"
        android:backgroundTint="#93C0C5"
        android:text="@string/translate"
        android:textColor="@color/black"
        android:textColorHint="#039C8E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/output"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/output"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_bias="0.724"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="58dp"
        android:layout_height="54dp"
        android:background="@drawable/rounded_rectangleimage"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/output"
        app:layout_constraintEnd_toEndOf="@+id/output"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/output"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/speak"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="58dp"
        android:layout_height="54dp"
        android:background="@drawable/rounded_rectangleimage"
        android:contentDescription="Speak"
        app:layout_constraintBottom_toBottomOf="@+id/input"
        app:layout_constraintEnd_toEndOf="@+id/input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/input"
        app:layout_constraintTop_toTopOf="@+id/input"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/speak"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="182dp"
        android:layout_height="52dp"
        android:scrollbarSize="10dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_bias="0.584"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="179dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_bias="0.302"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="202dp"
        android:layout_height="36dp"
        android:text="Text Translator"
        android:textAlignment="center"
        android:textColor="#78909C"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toEndOf="@+id/input"
        app:layout_constraintStart_toStartOf="@+id/input"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="95dp"
        android:layout_height="18dp"
        android:layout_marginTop="11dp"
        android:text="@string/from"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_bias="0.718"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="95dp"
        android:layout_height="18dp"
        android:text="TO"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/output"
        app:layout_constraintVertical_bias="0.171"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>